Upgrade Asciidoctor Gradle Plugin