@@ -70,15 +70,6 @@ tasks {
                 "cxf-version" to libs.versions.cxf.get(),
             ),
         )
-        forkOptions {
-            // To avoid warning, see https://github.com/asciidoctor/asciidoctor-gradle-plugin/issues/597
-            jvmArgs(
-                "--add-opens",
-                "java.base/sun.nio.ch=ALL-UNNAMED",
-                "--add-opens",
-                "java.base/java.io=ALL-UNNAMED",
-            )
-        }
     }
 
     val prepareDocsForGitHubPages by registering(Copy::class) {
